<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.climbingquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/info"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/each_question_is_worth_1_point" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/the_quiz"
            android:textAllCaps="true" />


        <android.support.v7.widget.CardView
            android:id="@+id/climb1_card"
            style="@style/CardViewStyle"
            android:focusable="true">

            <LinearLayout style="@style/CardViewLinearLayoutStyle">

                <ImageView
                    style="@style/CardViewImageViewStyle"
                    android:src="@drawable/climb1" />

                <TextView
                    style="@style/CardViewTextViewStyle"
                    android:text="@string/on_sight_question" />

                <RadioGroup
                    android:id="@+id/climb1radio"
                    style="@style/CardViewRadioGroupStyle">

                    <RadioButton
                        android:id="@+id/climb1a"
                        style="@style/CardViewRadioButtonStyle"
                        android:text="To be the first to climb a route" />

                    <RadioButton
                        android:id="@+id/climb1b"
                        style="@style/CardViewRadioButtonStyle"
                        android:text="To climb a route in first try with no prior beta" />

                    <RadioButton
                        android:id="@+id/climb1c"
                        style="@style/CardViewRadioButtonStyle"
                        android:text="To climb without gear" />
                </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/climb2_card"
            style="@style/CardViewStyle"
            android:focusable="true">

            <LinearLayout style="@style/CardViewLinearLayoutStyle">

                <ImageView
                    style="@style/CardViewImageViewStyle"
                    android:src="@drawable/climb2" />

                <TextView
                    style="@style/CardViewTextViewStyle"
                    android:text="If you visit Yosemite National Park you can climb here" />

                <CheckBox
                    android:id="@+id/climb2a"
                    style="@style/CardViewRadioButtonStyle"
                    android:text="The Nose" />

                <CheckBox
                    android:id="@+id/climb2b"
                    style="@style/CardViewRadioButtonStyle"
                    android:text="Lucid Dreaming" />

                <CheckBox
                    android:id="@+id/climb2c"
                    style="@style/CardViewRadioButtonStyle"
                    android:text="Half Dome" />

                <CheckBox
                    android:id="@+id/climb2d"
                    style="@style/CardViewRadioButtonStyle"
                    android:text="Fontainebleau" />


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/climb3_card"
            style="@style/CardViewStyle"
            android:focusable="true">

            <LinearLayout style="@style/CardViewLinearLayoutStyle">

                <ImageView
                    style="@style/CardViewImageViewStyle"
                    android:src="@drawable/climb3" />

                <TextView
                    style="@style/CardViewTextViewStyle"
                    android:text="What climbing style is Alex Honnold famous for?" />

                <RadioGroup
                    android:id="@+id/climb3radio"
                    style="@style/CardViewRadioGroupStyle">

                    <RadioButton
                        android:id="@+id/climb3a"
                        style="@style/CardViewRadioButtonStyle"
                        android:text="Trad climbing" />

                    <RadioButton
                        android:id="@+id/climb3b"
                        style="@style/CardViewRadioButtonStyle"
                        android:text="High ball bouldering" />

                    <RadioButton
                        android:id="@+id/climb3c"
                        style="@style/CardViewRadioButtonStyle"
                        android:text="Free climbing" />

                    <RadioButton
                        android:id="@+id/climb3d"
                        style="@style/CardViewRadioButtonStyle"
                        android:text="Free soloing" />
                </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/climb4_card"
            style="@style/CardViewStyle"
            android:focusable="true">

            <LinearLayout style="@style/CardViewLinearLayoutStyle">

                <ImageView
                    style="@style/CardViewImageViewStyle"
                    android:src="@drawable/climb4" />

                <TextView
                    style="@style/CardViewTextViewStyle"
                    android:text="What is beta?" />

                <RadioGroup
                    android:id="@+id/climb4radio"
                    style="@style/CardViewRadioGroupStyle">

                    <RadioButton
                        android:id="@+id/climb4a"
                        style="@style/CardViewRadioButtonStyle"
                        android:text="The easy routes in a climbing gym" />

                    <RadioButton
                        android:id="@+id/climb4b"
                        style="@style/CardViewRadioButtonStyle"
                        android:text="Advice on how to climb a route" />

                    <RadioButton
                        android:id="@+id/climb4c"
                        style="@style/CardViewRadioButtonStyle"
                        android:text="The person who holds the rope" />

                    <RadioButton
                        android:id="@+id/climb4d"
                        style="@style/CardViewRadioButtonStyle"
                        android:text="To climb only using footholds for handholds" />
                </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/climb5_card"
            style="@style/CardViewStyle"
            android:focusable="true">

            <LinearLayout style="@style/CardViewLinearLayoutStyle">

                <ImageView
                    style="@style/CardViewImageViewStyle"
                    android:src="@drawable/climb5" />

                <TextView
                    style="@style/CardViewTextViewStyle"
                    android:text="His first name is Alexander. What is his last name?" />

                <EditText
                    android:id="@+id/climb5_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:hint="@string/write_here"
                    android:inputType="text" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

            <Button
                style="@style/ButtonStyle"
                android:onClick="submit"
                android:text="@string/submit" />

    </LinearLayout>
</ScrollView>
